--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shuei Pei
-# logo: /assets/img/headshot_circle.png
+logo: /ShUWEI pic.jpg
 #description: M.E. in Mechanical Engineering
 show_downloads: true
 theme: jekyll-theme-minimal
