--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shuei Pei
-logo: /ShUWEI pic.jpg
+logo: /1.png
 #description: M.E. in Mechanical Engineering
 show_downloads: true
 theme: jekyll-theme-minimal
