--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shuwei Pei
 logo: /1.png
 #description: M.E. in Mechanical Engineering
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
