--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Shuwei Pei / Travid
-logo: /1.png
+title: PeiShuwei Website：裴树伟个人网站
+logo: /PersonalPortrait.png
 #description: M.E. in Mechanical Engineering
 show_downloads: false
 theme: jekyll-theme-minimal
