--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: PeiShuwei Website：裴树伟个人网站
+title: 裴树伟
 logo: /PersonalPortrait.png
 #description: M.E. in Mechanical Engineering
 show_downloads: false
