--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 裴树伟
-logo: /PersonalPortrait.JPG
+logo: /PersonalPortrait.jpg
 #description: M.E. in Mechanical Engineering
 show_downloads: false
 theme: jekyll-theme-minimal
